# Drashta

./: README.md  build.sh
backend/: Cargo.toml
backend/src/: README.md  api  bench.sh  config.json  ev_type  lib.rs  out.perf  parser.rs  redis.rs  run1.txt
backend/src/test_db/: db  snap.000000000000526E
backend/static/: index.html
backend/static/assets/: index-Bix2ichh.js  index-K-BceEUf.css
drashta/: Cargo.toml  build.sh
drashta/backend/: Cargo.toml
drashta/backend/src/: events.rs  lib.rs  main.rs  parser.rs  regex.rs  render.rs
drashta/frontend/: index.html  package-lock.json  package.json  vite.config.ts
drashta/frontend/src/: App.tsx  DateRangePicker.tsx  chart.tsx  test.tsx
drashta/src/: events.rs  main.rs  parser.rs
drashta/src/web/: render.rs
foundyou/: Cargo.toml
foundyou/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Dashboard.tsx  DateRangePicker.tsx  chart.tsx  index.css  test.tsx
