[package]
name = "foundyou"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
crossterm = "0.29.0"
env_logger = "0.11.8"
indexmap = "2.10.0"
lazy_static = "1.5.0"
log = "0.4.27"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
walkdir = "2.5.0"
