[package]
name = "drashta"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
futures = "0.3.31"
systemd = "0.10.1"
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = {version = "0.6.6", features = ["fs"]}
wasm-bindgen-futures = "0.4.50"
