[package]
name = "drashta"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = {version = "0.8.12", features = ["serde"]}
aho-corasick = "1.1.3"
anyhow = "1.0.99"
async-stream = "0.3.6"
axum = "0.8.4"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
once_cell = "1.21.3"
regex = "1.11.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
systemd = "0.10.1"
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = {version = "0.6.6", features = ["fs", "cors"]}
